@@ -1,5 +1,10 @@
 2007-09-18  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* Parser/CodeGenerator.cs: Fix renaming of partial classes. It was using the
+	  wrong IClass to get the line and column.
+
+2007-09-18  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* Gui/CSharpTextEditorExtension.cs: When completing 'override', show
 	  overridables for System.Object.
 
